--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
+    "firebase-admin": "^12.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3",
