--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task-assigner",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "firebase-admin": "^12.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
